// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clean normalize input 1`] = `
Array [
  Object {
    "annee": 4150,
    "civilite": "n",
    "code_postal": 57100,
    "date_ouverture": "2017-11-02",
    "numero_dossier": "RG20136Q",
    "residence": "A domicile",
    "type": "Tutelle",
    "ville": "thionville",
  },
  Object {
    "annee": 4000,
    "civilite": "n",
    "code_postal": 75005,
    "date_ouverture": "2016-12-03",
    "numero_dossier": "1236HPLY",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "paris",
  },
  Object {
    "annee": 4500,
    "civilite": "n",
    "code_postal": 85000,
    "date_ouverture": "2010-08-05",
    "numero_dossier": "meourg120",
    "residence": "A domicile",
    "type": "Sauvegarde de justice",
    "ville": "marseille",
  },
]
`;

exports[`fix various invalid data 2 should import correctly 1`] = `
Array [
  Object {
    "annee": 1939,
    "civilite": "F",
    "code_postal": 33720,
    "date_ouverture": "2017-01-26",
    "numero_dossier": "RG/16/A/00402",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Illats",
  },
  Object {
    "annee": 1956,
    "civilite": "H",
    "code_postal": 94500,
    "date_ouverture": "2018-04-26",
    "numero_dossier": "RG/14/A/00425",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Champigny",
  },
  Object {
    "annee": 1963,
    "civilite": "H",
    "code_postal": 94500,
    "date_ouverture": "2018-08-03",
    "numero_dossier": "RG/17/A/00475",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Champigny",
  },
  Object {
    "annee": 1953,
    "civilite": "H",
    "code_postal": 94140,
    "date_ouverture": "2018-06-06",
    "numero_dossier": "RG/09/0017",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Alfortville",
  },
  Object {
    "annee": 1933,
    "civilite": "H",
    "code_postal": 94130,
    "date_ouverture": "2018-04-19",
    "numero_dossier": "RG/14/A/00054",
    "residence": "A domicile",
    "type": "Tutelle",
    "ville": "Nogent",
  },
  Object {
    "annee": 1934,
    "civilite": "F",
    "code_postal": 94130,
    "date_ouverture": "2018-04-19",
    "numero_dossier": "RG/14/A/00055",
    "residence": "A domicile",
    "type": "Tutelle",
    "ville": "Nogent",
  },
  Object {
    "annee": 1944,
    "civilite": "H",
    "code_postal": 942600,
    "date_ouverture": "2018-09-13",
    "numero_dossier": "RG/18/303",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Fresnes",
  },
  Object {
    "annee": 1925,
    "civilite": "H",
    "code_postal": 94500,
    "date_ouverture": "2016-12-15",
    "numero_dossier": "RG/16/A/00089",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Champigny",
  },
  Object {
    "annee": 1973,
    "civilite": "H",
    "code_postal": 94510,
    "date_ouverture": "2017-12-13",
    "numero_dossier": "RG/17/A/00357",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "La Queue en Brie",
  },
  Object {
    "annee": 1968,
    "civilite": "H",
    "code_postal": 27300,
    "date_ouverture": "2016-06-06",
    "numero_dossier": "RG/15/00325",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Bernay",
  },
  Object {
    "annee": 1923,
    "civilite": "H",
    "code_postal": 94130,
    "date_ouverture": "2017-02-03",
    "numero_dossier": "RG/16/A/00295",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Nogent",
  },
  Object {
    "annee": 1941,
    "civilite": "H",
    "code_postal": 94240,
    "date_ouverture": "2017-01-26",
    "numero_dossier": "RG/16/A/00330",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "L'Hay les Roses",
  },
  Object {
    "annee": 1937,
    "civilite": "F",
    "code_postal": 94120,
    "date_ouverture": "2017-01-31",
    "numero_dossier": "RG/16/A/00372",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Fontenay",
  },
  Object {
    "annee": 1977,
    "civilite": "H",
    "code_postal": 85180,
    "date_ouverture": "2017-11-23",
    "numero_dossier": "RG/17/A/00319",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Château Olonnes",
  },
  Object {
    "annee": 1971,
    "civilite": "F",
    "code_postal": 94230,
    "date_ouverture": "2016-09-22",
    "numero_dossier": "RG/02/00183",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Cachan",
  },
  Object {
    "annee": 1926,
    "civilite": "F",
    "code_postal": 94800,
    "date_ouverture": "2018-11-06",
    "numero_dossier": "RG/18/00218",
    "residence": "En établissement avec conservation du domicile",
    "type": "Tutelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1966,
    "civilite": "H",
    "code_postal": 94390,
    "date_ouverture": "2016-06-14",
    "numero_dossier": "RG/16/00041",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Orly",
  },
  Object {
    "annee": 1940,
    "civilite": "H",
    "code_postal": 94250,
    "date_ouverture": "2018-02-01",
    "numero_dossier": "RG/17/00731",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "Gentilly",
  },
  Object {
    "annee": 1952,
    "civilite": "H",
    "code_postal": 94250,
    "date_ouverture": "2016-10-28",
    "numero_dossier": "RG/15/00087",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Gentilly",
  },
  Object {
    "annee": 1959,
    "civilite": "F",
    "code_postal": 94120,
    "date_ouverture": "2018-11-13",
    "numero_dossier": "RG/18/A/00341",
    "residence": "A domicile",
    "type": "Sauvegarde de justice",
    "ville": "Fontenay",
  },
  Object {
    "annee": 1960,
    "civilite": "H",
    "code_postal": 94450,
    "date_ouverture": "2016-08-01",
    "numero_dossier": "RG/06/00123",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Chevilly la Rue",
  },
  Object {
    "annee": 1933,
    "civilite": "F",
    "code_postal": 94300,
    "date_ouverture": "2017-02-10",
    "numero_dossier": "RG/16/A/00315",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Vincennes",
  },
  Object {
    "annee": 1943,
    "civilite": "F",
    "code_postal": 94500,
    "date_ouverture": "2016-07-25",
    "numero_dossier": "RG/16/A/00267",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Champigny",
  },
  Object {
    "annee": 1951,
    "civilite": "H",
    "code_postal": 91290,
    "date_ouverture": "2018-10-23",
    "numero_dossier": "RG/18/00228",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Arpajon",
  },
  Object {
    "annee": 1930,
    "civilite": "F",
    "code_postal": 94120,
    "date_ouverture": "2018-05-29",
    "numero_dossier": "RG/18/A/00168",
    "residence": "A domicile",
    "type": "Tutelle",
    "ville": "Fontenay",
  },
  Object {
    "annee": 1953,
    "civilite": "F",
    "code_postal": 94500,
    "date_ouverture": "2017-02-23",
    "numero_dossier": "RG/16/A/00419",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Champigny",
  },
  Object {
    "annee": 1965,
    "civilite": "H",
    "code_postal": 94250,
    "date_ouverture": "2017-07-04",
    "numero_dossier": "RG/13/00071",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Gentilly",
  },
  Object {
    "annee": 1959,
    "civilite": "H",
    "code_postal": 94400,
    "date_ouverture": "2017-09-17",
    "numero_dossier": "RG/17/00224",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Vitry sur Seine",
  },
  Object {
    "annee": 1936,
    "civilite": "F",
    "code_postal": 94240,
    "date_ouverture": "2016-10-20",
    "numero_dossier": "RG/16/00033",
    "residence": "En établissement avec conservation du domicile",
    "type": "Tutelle",
    "ville": "L'Hay les Roses",
  },
  Object {
    "annee": 1981,
    "civilite": "H",
    "code_postal": 94800,
    "date_ouverture": "2018-09-25",
    "numero_dossier": "RG/18/00174",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1932,
    "civilite": "H",
    "code_postal": 94800,
    "date_ouverture": "2016-10-11",
    "numero_dossier": "RG/15/00352",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1959,
    "civilite": "H",
    "code_postal": 94300,
    "date_ouverture": "2016-07-29",
    "numero_dossier": "RG/15/A/00113",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Vincennes",
  },
  Object {
    "annee": 1928,
    "civilite": "F",
    "code_postal": 94800,
    "date_ouverture": "2018-07-16",
    "numero_dossier": "RG/17/000545",
    "residence": "En établissement avec conservation du domicile",
    "type": "Tutelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1965,
    "civilite": "F",
    "code_postal": 94270,
    "date_ouverture": "2017-09-14",
    "numero_dossier": "RG/17/00343",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Kremlin Bicetre",
  },
  Object {
    "annee": 1947,
    "civilite": "F",
    "code_postal": 94240,
    "date_ouverture": "2018-06-01",
    "numero_dossier": "RG/18/A/00187",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "L'Hay les Roses",
  },
  Object {
    "annee": 1955,
    "civilite": "H",
    "code_postal": 94300,
    "date_ouverture": "2017-01-31",
    "numero_dossier": "RG/16/A/00375",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Vincennes",
  },
  Object {
    "annee": 1932,
    "civilite": "F",
    "code_postal": 94230,
    "date_ouverture": "2018-12-28",
    "numero_dossier": "RG/10/00117",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Cachan",
  },
  Object {
    "annee": 1958,
    "civilite": "H",
    "code_postal": 94550,
    "date_ouverture": "2017-05-23",
    "numero_dossier": "RG/17/00059",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Chevilly la Rue",
  },
  Object {
    "annee": 1928,
    "civilite": "F",
    "code_postal": 94230,
    "date_ouverture": "2017-07-28",
    "numero_dossier": "RG/17/000256",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Cachan",
  },
  Object {
    "annee": 1943,
    "civilite": "H",
    "code_postal": 24120,
    "date_ouverture": "2016-07-05",
    "numero_dossier": "RG/16/000111",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Terrasson",
  },
  Object {
    "annee": 1947,
    "civilite": "H",
    "code_postal": 94800,
    "date_ouverture": "2018-08-30",
    "numero_dossier": "RG/18/000151",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1938,
    "civilite": "F",
    "code_postal": 94170,
    "date_ouverture": "2017-03-02",
    "numero_dossier": "RG/17/A/00070",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Le Perreux",
  },
  Object {
    "annee": 1933,
    "civilite": "F",
    "code_postal": 94160,
    "date_ouverture": "2018-04-24",
    "numero_dossier": "RG/17/A/00315",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Saint Mandé",
  },
  Object {
    "annee": 1935,
    "civilite": "F",
    "code_postal": 94800,
    "date_ouverture": "2018-01-23",
    "numero_dossier": "RG/17/00357",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Villejuif",
  },
  Object {
    "annee": 1957,
    "civilite": "F",
    "code_postal": 94550,
    "date_ouverture": "2018-06-07",
    "numero_dossier": "RG/17/000353",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Chevilly la Rue",
  },
  Object {
    "annee": 1957,
    "civilite": "H",
    "code_postal": 94120,
    "date_ouverture": "2018-04-03",
    "numero_dossier": "RG/12/A/00366A",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Fontenay",
  },
  Object {
    "annee": 1929,
    "civilite": "F",
    "code_postal": 94400,
    "date_ouverture": "2017-09-26",
    "numero_dossier": "RG/17/000167",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Vitry sur Seine",
  },
  Object {
    "annee": 1931,
    "civilite": "F",
    "code_postal": 94240,
    "date_ouverture": "2018-09-28",
    "numero_dossier": "RG/15/000381",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "L'Hay les Roses",
  },
  Object {
    "annee": 1921,
    "civilite": "F",
    "code_postal": 92000,
    "date_ouverture": "2017-09-27",
    "numero_dossier": "RG/17/A/00301",
    "residence": "En établissement avec conservation du domicile",
    "type": "Tutelle",
    "ville": "Nanterre",
  },
  Object {
    "annee": 1927,
    "civilite": "F",
    "code_postal": 95160,
    "date_ouverture": "2016-09-27",
    "numero_dossier": "RG/16/A/00240",
    "residence": "En établissement avec conservation du domicile",
    "type": "Tutelle",
    "ville": "Montmorency",
  },
  Object {
    "annee": 1939,
    "civilite": "H",
    "code_postal": 94250,
    "date_ouverture": "2017-11-28",
    "numero_dossier": "RG/17/00048",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Gentilly",
  },
  Object {
    "annee": 1940,
    "civilite": "H",
    "code_postal": 94230,
    "date_ouverture": "2016-09-20",
    "numero_dossier": "RG/16/00022",
    "residence": "A domicile",
    "type": "Curatelle",
    "ville": "Cachan",
  },
  Object {
    "annee": 1954,
    "civilite": "F",
    "code_postal": 93210,
    "date_ouverture": "2018-03-20",
    "numero_dossier": "RG/17/000205",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "Saint Denis",
  },
  Object {
    "annee": 1924,
    "civilite": "F",
    "code_postal": 94230,
    "date_ouverture": "2016-12-29",
    "numero_dossier": "RG/16/000317",
    "residence": "A domicile",
    "type": "Tutelle",
    "ville": "Cachan",
  },
  Object {
    "annee": 1924,
    "civilite": "F",
    "code_postal": 94230,
    "date_ouverture": "2018-11-06",
    "numero_dossier": "RG/17/000495",
    "residence": "En établissement avec conservation du domicile",
    "type": "Curatelle",
    "ville": "Cachan",
  },
]
`;

exports[`fix various invalid data 2 should import correctly 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`fix various invalid data should normalize civilites 1`] = `
Array [
  Object {
    "annee": 1943,
    "civilite": "F",
    "code_postal": 59320,
    "date_ouverture": "2018-07-03",
    "numero_dossier": "99/07460",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": 1954,
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2014-03-28",
    "numero_dossier": "13/00988",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1948",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2018-07-30",
    "numero_dossier": "18/00594",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1945",
    "civilite": "F",
    "code_postal": 59139,
    "date_ouverture": "2019-01-25",
    "numero_dossier": "18/00408",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "wattignies",
  },
  Object {
    "annee": "1939",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2017-06-22",
    "numero_dossier": "17/00177",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1930",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-03-05",
    "numero_dossier": "90/03580",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1949",
    "civilite": "H",
    "code_postal": 59139,
    "date_ouverture": "2017-12-22",
    "numero_dossier": "12/00812",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "wattignies",
  },
  Object {
    "annee": "1936",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2006-09-05",
    "numero_dossier": "05/01208",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1920",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2018-10-24",
    "numero_dossier": "18/00598",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1932",
    "civilite": "F",
    "code_postal": 59139,
    "date_ouverture": "2010-10-20",
    "numero_dossier": "10/00104",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1934",
    "civilite": "F",
    "code_postal": 59320,
    "date_ouverture": "2019-01-30",
    "numero_dossier": "14/00442",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": "1946",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2019-01-15",
    "numero_dossier": "18/01467",
    "residence": "En établissement",
    "type": "Sauvegarde de justice",
    "ville": "seclin",
  },
  Object {
    "annee": "1933",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2017-03-27",
    "numero_dossier": "16/01264",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1933",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2016-05-30",
    "numero_dossier": "15/00802",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1936",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2015-01-27",
    "numero_dossier": "14/00774",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1923",
    "civilite": "H",
    "code_postal": 59139,
    "date_ouverture": "1986-12-09",
    "numero_dossier": "12/05498",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "wattignies",
  },
  Object {
    "annee": "1942",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2019-02-07",
    "numero_dossier": "17/01237",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1945",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2009-01-24",
    "numero_dossier": "08/0534",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1922",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2012-02-27",
    "numero_dossier": "11/00974",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1943",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-02-12",
    "numero_dossier": "15/00081",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1936",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2017-03-13",
    "numero_dossier": "16/00789",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1921",
    "civilite": "H",
    "code_postal": 59120,
    "date_ouverture": "2018-12-17",
    "numero_dossier": "18/00670",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "loos",
  },
  Object {
    "annee": "1929",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-01-27",
    "numero_dossier": "14/00761",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1946",
    "civilite": "H",
    "code_postal": 59139,
    "date_ouverture": "2007-09-12",
    "numero_dossier": "07/00071",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "wattignies",
  },
  Object {
    "annee": "1926",
    "civilite": "F",
    "code_postal": 59320,
    "date_ouverture": "2018-06-13",
    "numero_dossier": "06/02429",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": "1947",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2013-02-27",
    "numero_dossier": "12/00996",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1933",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2017-08-01",
    "numero_dossier": "17/00720",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1953",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2017-02-27",
    "numero_dossier": "16/00504",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1938",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2018-12-19",
    "numero_dossier": "18/01077",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1948",
    "civilite": "H",
    "code_postal": 59320,
    "date_ouverture": "2018-06-13",
    "numero_dossier": "17/01363",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "haubourdin",
  },
  Object {
    "annee": "1936",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2016-03-31",
    "numero_dossier": "15/01265",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1927",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2015-01-06",
    "numero_dossier": "14/01014",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "seclin",
  },
  Object {
    "annee": "1922",
    "civilite": "H",
    "code_postal": 59113,
    "date_ouverture": "2013-01-31",
    "numero_dossier": "12/00605",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1942",
    "civilite": "F",
    "code_postal": 59113,
    "date_ouverture": "2018-10-15",
    "numero_dossier": "97/06510",
    "residence": "En établissement",
    "type": "curatelle renforcée",
    "ville": "seclin",
  },
  Object {
    "annee": "1923",
    "civilite": "F",
    "code_postal": 62220,
    "date_ouverture": "2018-05-28",
    "numero_dossier": "18/00096",
    "residence": "En établissement",
    "type": "Tutelle",
    "ville": "carvin",
  },
]
`;

exports[`fix various invalid data should normalize civilites 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`read: rename columns should rename approximative columns 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Sauvegarde de justice",
  },
  Object {
    "annee": 1998,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Mesure ad hoc",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`read: rename columns should rename approximative columns 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`valid civilites should normalize civilites 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": "H",
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": "H",
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": "F",
    "date_ouverture": "2010-05-22",
    "type": "Sauvegarde de justice",
  },
  Object {
    "annee": 1998,
    "civilite": "F",
    "date_ouverture": "2010-05-22",
    "type": "Mesure ad hoc",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`valid civilites should normalize civilites 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`validate: invalid data should fail invalid-annee.xlsx should be invalid 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 4000,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
]
`;

exports[`validate: invalid data should fail invalid-annee.xlsx should be invalid 2`] = `
Object {
  "errors": Object {
    "Ligne 3": Array [
      "Année non valide : \\"4000\\"",
    ],
  },
}
`;

exports[`validate: invalid data should fail invalid-date.xlsx should be invalid 1`] = `
Array [
  Object {
    "civilite": undefined,
    "date_ouverture": "2015-12-25",
    "type": "Curatelle",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "Invalid Date",
    "type": "Tutelle",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
    "type": "Tutelle",
  },
]
`;

exports[`validate: invalid data should fail invalid-date.xlsx should be invalid 2`] = `
Object {
  "errors": Object {
    "Ligne 3": Array [
      "Date d'ouverture non valide : \\"Invalid Date\\"",
    ],
  },
}
`;

exports[`validate: valid data should NOT fail valid1.xlsx should be valid 1`] = `
Array [
  Object {
    "annee": 2000,
    "civilite": undefined,
    "date_ouverture": "2018-12-10",
    "type": "Curatelle",
  },
  Object {
    "annee": 2010,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "annee": 1998,
    "civilite": undefined,
    "date_ouverture": "2010-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1999-05-22",
  },
  Object {
    "civilite": undefined,
    "date_ouverture": "1989-09-22",
  },
]
`;

exports[`validate: valid data should NOT fail valid1.xlsx should be valid 2`] = `
Object {
  "errors": undefined,
}
`;

exports[`validate: valid data should NOT fail valid2.xlsx should be valid 1`] = `
Array [
  Object {
    "annee": 2003,
    "civilite": "H",
    "code_postal": 57100,
    "date_ouverture": "2017-11-02",
    "numero_dossier": "RG20136Q",
    "residence": "A domicile",
    "type": "Tutelle",
    "ville": "thionville",
  },
  Object {
    "annee": 2004,
    "civilite": "H",
    "code_postal": 75005,
    "date_ouverture": "2016-12-03",
    "numero_dossier": "1236HPLY",
    "residence": "En établissement",
    "type": "Curatelle",
    "ville": "paris",
  },
  Object {
    "annee": 2009,
    "civilite": "F",
    "code_postal": 85000,
    "date_ouverture": "2010-08-05",
    "numero_dossier": "meourg120",
    "residence": "A domicile",
    "type": "Sauvegarde de justice",
    "ville": "marseille",
  },
]
`;

exports[`validate: valid data should NOT fail valid2.xlsx should be valid 2`] = `
Object {
  "errors": undefined,
}
`;
